tdf#132424 don't generate font previews in advance for lool

Change-Id: I393db7b019fe16b2b7361bd20ec99dc5671ba1ef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92943
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>